Add styles for footer, contact, hero, and services pages
- Created footer styles with background color, border, and text alignment.
- Developed contact page styles including title, wrapper, info sections, and responsive design.
- Implemented hero section styles with text alignment, footer positioning, and image styling.
- Designed services page with grid layout for service cards and responsive adjustments for different screen sizes.

--- a/P2/project/index.html
+++ b/P2/project/index.html
@@ -7,8 +7,16 @@
     <link rel="stylesheet" href="styles/global.css" />
     <link rel="stylesheet" href="styles/components/navbar.css" />
     <link rel="stylesheet" href="styles/components/button.css" />
-    <link rel="stylesheet" href="styles/components/hero.css" />
+    <link rel="stylesheet" href="styles/components/footer.css" />
+
     <link rel="stylesheet" href="styles/pages/about.css" />
+    <link rel="stylesheet" href="styles/pages/hero.css" />
+    <link rel="stylesheet" href="styles/pages/services.css" />
+    <link rel="stylesheet" href="styles/pages/contact.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+    />
     <link rel="stylesheet" href="styles/anim/animate.css" />
 
     <title>Box</title>
@@ -68,7 +76,6 @@
     <div id="about" class="container">
       <h2 class="about-title">Tentang Kami</h2>
       <div class="about">
-
         <div class="about-banner">
           <img class="about-logo" src="assets/logo.webp" alt="" />
           <img
@@ -98,11 +105,123 @@
             voluptatem quae ipsum quisquam quo! Consectetur impedit ab nulla
             quod maxime natus vel reiciendis voluptatibus doloremque quisquam?
           </p>
+          <a class="btn" href="#">Baca Selengkapnya</a>
         </div>
       </div>
     </div>
 
-    <div id="services" class="container"></div>
-    <div id="contact" class="container"></div>
+    <div id="services" class="container">
+      <h2 class="services-title">Layanan Kami</h2>
+      <div class="services">
+        <div class="service-card">
+          <img src="assets/services/award.gif" alt="Service 1" />
+          <h3>Layanan 1</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
+            quod.
+          </p>
+        </div>
+
+        <div class="service-card">
+          <img src="assets/services/idea.gif" alt="Service 1" />
+          <h3>Layanan 1</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
+            quod.
+          </p>
+        </div>
+
+        <div class="service-card">
+          <img src="assets/services/laptop.gif" alt="Service 1" />
+          <h3>Layanan 1</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
+            quod.
+          </p>
+        </div>
+
+        <div class="service-card">
+          <img src="assets/services/phone.gif" alt="Service 1" />
+          <h3>Layanan 1</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
+            quod.
+          </p>
+        </div>
+
+        <div class="service-card">
+          <img src="assets/services/save-money.gif" alt="Service 1" />
+          <h3>Layanan 1</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
+            quod.
+          </p>
+        </div>
+
+        <div class="service-card">
+          <img src="assets/services/target.gif" alt="Service 1" />
+          <h3>Layanan 1</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
+            quod.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <div id="contact" class="container">
+      <h2 class="contact-title">Hubungi Kami</h2>
+      <div class="contact-wrapper">
+        <div class="contact-info">
+          <div class="contact-item">
+            <i class="fas fa-envelope"></i>
+            <div>
+              <h3>Email</h3>
+              <p>info@example.com</p>
+            </div>
+          </div>
+
+          <div class="contact-item">
+            <i class="fas fa-phone"></i>
+            <div>
+              <h3>Telepon</h3>
+              <p>(123) 456-7890</p>
+            </div>
+          </div>
+
+          <div class="contact-item">
+            <i class="fas fa-map-marker-alt"></i>
+            <div>
+              <h3>Alamat</h3>
+              <p>Jl. Contoh No. 123, Kota, Negara</p>
+            </div>
+          </div>
+
+          <div class="social-links">
+            <a href="#"><i class="fab fa-facebook"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fab fa-linkedin"></i></a>
+          </div>
+        </div>
+
+        <div class="map-container">
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3989.681228629097!2d117.1388952!3d-0.47497190000000006!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2df67f21b115fd67%3A0x108077d433712165!2sUniversitas%20Muhammadiyah%20Kalimantan%20Timur%20Samarinda!5e0!3m2!1sid!2sid!4v1757632687884!5m2!1sid!2sid"
+            width="600"
+            height="450"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+          ></iframe>
+        </div>
+      </div>
+    </div>
+
+    <footer class="footer">
+      <p>&copy; 2025 BOX. All rights reserved.</p>
+      <a href="https://ideation.bontangtechnohub.com/" class="btn" target="_blank">Referensi Website</a>
+    </footer>
   </body>
 </html>
