feat: Update README.md with project details and enhance index.html layout for better responsiveness

--- a/P3/Tugas_2/index.html
+++ b/P3/Tugas_2/index.html
@@ -36,13 +36,13 @@
     <title>My Instagram</title>
   </head>
   <body>
-    <div class="container mx-auto px-4 sm:px-6 lg:px-8 my-5">
+    <div class="container mx-52 px-4 sm:px-6 lg:px-8 my-5">
       <div
-        class="flex flex-col md:flex-row items-center md:items-start gap-8 md:gap-10 lg:gap-20"
+        class="flex flex-col md:flex-row items-center md:items-center gap-8 md:gap-10 lg:gap-20"
       >
         <div class="flex-shrink-0">
           <img
-            class="rounded-circle h-36 w-36 md:h-44 md:w-44"
+            class="rounded-circle h-36 w-36 md:h-[40vh] md:w-[40vh]"
             src="https://avatars.githubusercontent.com/u/147823877?v=4"
             alt="My Profile Picture"
           />
@@ -85,7 +85,7 @@
         <div class="flex flex-col items-start justify-start gap-4 w-full">
           <div class="flex flex-col items-center justify-center gap-2">
             <div
-              class="flex items-center justify-center w-20 h-20 sm:w-24 sm:h-24 bg-gray-800 rounded-full border-2 border-gray-600"
+              class="flex items-center justify-center w-20 h-20 sm:w-24 sm:h-24 bg-gray-800 rounded-full border-2 border-gray-500"
             >
               <i class="bi bi-plus-circle-dotted text-4xl text-gray-400"></i>
             </div>
@@ -100,13 +100,13 @@
         class="flex items-center justify-around border-b-2 border-gray-600 py-3"
       >
         <i
-          class="bi bi-grid-3x3 hover:text-gray-400 cursor-pointer text-xl"
+          class="bi bi-grid-3x3 hover:text-gray-400 cursor-pointer sm:text-md md:text-xl"
         ></i>
         <i
-          class="bi bi-bookmark hover:text-gray-400 cursor-pointer text-xl"
+          class="bi bi-bookmark hover:text-gray-400 cursor-pointer sm:text-md md:text-xl"
         ></i>
         <i
-          class="bi bi-person-square hover:text-gray-400 cursor-pointer text-xl"
+          class="bi bi-person-square hover:text-gray-400 cursor-pointer sm:text-md md:text-xl"
         ></i>
       </nav>
       <div>
